--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -64,6 +64,7 @@ h1 {
   font-size: 50px;
   line-height: 68px;
   color: #000000;
+  background-color: #7AA7C7;
 }
 
 .container-letters {
@@ -90,10 +91,11 @@ h1 {
   width: 3vw;
   height: 5vh;
   border-radius: 3px;
-  background-color: #e1ecf4;
-  border: 1px solid #7aa7c7;
+  background-color: #E1ECF4;
+  border: 1px solid 
+  #7AA7C7;
   font-size: 16px;
-  color: #39739d;
+  color: #39739D;
   line-height: 18px;
   font-weight: 700;
   margin-bottom: 10px;
@@ -104,10 +106,10 @@ h1 {
   width: 3vw;
   height: 5vh;
   border-radius: 3px;
-  background-color: #f8d166;
+  background-color: #9FAAB5;
   border: 1px solid #7aa7c7;
   font-size: 16px;
-  color: #39739d;
+  color: #798A9F;
   line-height: 18px;
   font-weight: 700;
   margin-bottom: 10px;
