--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap");
 
@@ -7,7 +7,6 @@
 }
 
 .game-container {
-  background-color: #209645;
   width: 100%;
   padding-top: 40px;
 
@@ -32,7 +31,6 @@ h1 {
 }
 
 .choose-word {
-  background-color: yellow;
   height: 50vh;
 
   display: flex;
@@ -55,20 +53,20 @@ h1 {
 }
 
 .choose-word button:hover {
-    background-color: #3ca066;
+  background-color: #3ca066;
 }
 
 .choose-word p {
   width: 100%;
+  height: 50px;
   font-family: "Noto Sans", sans-serif;
   font-size: 50px;
   line-height: 68px;
   color: #000000;
-  background-color: #7AA7C7;
+  padding-bottom: 15px;
 }
 
 .container-letters {
-  background-color: pink;
   width: 100%;
 
   display: flex;
@@ -87,15 +85,14 @@ h1 {
   flex-wrap: wrap;
 }
 
-.letters-unselected  {
+.letters-unselected {
   width: 3vw;
   height: 5vh;
   border-radius: 3px;
-  background-color: #E1ECF4;
-  border: 1px solid 
-  #7AA7C7;
+  background-color: #e1ecf4;
+  border: 1px solid #7aa7c7;
   font-size: 16px;
-  color: #39739D;
+  color: #39739d;
   line-height: 18px;
   font-weight: 700;
   margin-bottom: 10px;
@@ -106,16 +103,65 @@ h1 {
   width: 3vw;
   height: 5vh;
   border-radius: 3px;
-  background-color: #9FAAB5;
+  background-color: #9faab5;
   border: 1px solid #7aa7c7;
   font-size: 16px;
-  color: #798A9F;
+  color: #798a9f;
   line-height: 18px;
   font-weight: 700;
   margin-bottom: 10px;
   cursor: pointer;
 }
 
+.userLost {
+  color: red;
+}
 
+.userWon {
+  color: green;
+}
 
+.container-kick {
+  width: 100%;
+  margin-top: 30px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-kick p {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  color: #000000;
+  padding-right: 30px;
+}
+
+.container-kick input {
+  width: 30vw;
+  height: 6vh;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: #000000;
+  border: 1px solid #cccccc;
+  box-shadow: 2px 2px 5px 0 #00000040;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.container-kick button {
+  width: 10vw;
+  height: 7vh;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 18px;
+  border-radius: 3px;
+  color: #3c76a1;
+  border: 1px solid #7aa7c7;
+  background-color: #e1ecf4;
+  margin-left: 30px;
+  cursor: pointer;
+}
