--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -58,12 +58,11 @@ h1 {
 
 .choose-word p {
   width: 100%;
-  height: 50px;
   font-family: "Noto Sans", sans-serif;
   font-size: 50px;
   line-height: 68px;
   color: #000000;
-  padding-bottom: 15px;
+  letter-spacing: 20px;
 }
 
 .container-letters {
@@ -164,4 +163,8 @@ h1 {
   background-color: #e1ecf4;
   margin-left: 30px;
   cursor: pointer;
+}
+
+.container-kick button:hover {
+  background-color: #cee99b;
 }
