--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -56,7 +56,7 @@ h1 {
   background-color: #3ca066;
 }
 
-.choose-word p {
+.wordChoose {
   width: 100%;
   font-family: "Noto Sans", sans-serif;
   font-size: 50px;
@@ -74,21 +74,25 @@ h1 {
 }
 
 .letters {
-  width: 50vw;
+  width: 45vw;
   height: 13vh;
   margin-top: 30px;
 
-  display: flex;
-  flex-direction: column;
+  display: flex ;
+  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap:wrap;
+}
+
+.letters button {
+  margin-right: 5px;
 }
 
 .letters-unselected {
   width: 3vw;
   height: 5vh;
   border-radius: 3px;
-  background-color: #e1ecf4;
+  background-color: #E1ECF4;
   border: 1px solid #7aa7c7;
   font-size: 16px;
   color: #39739d;
