--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -78,10 +78,10 @@ h1 {
   height: 13vh;
   margin-top: 30px;
 
-  display: flex ;
+  display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
 
 .letters button {
@@ -92,7 +92,7 @@ h1 {
   width: 3vw;
   height: 5vh;
   border-radius: 3px;
-  background-color: #E1ECF4;
+  background-color: #e1ecf4;
   border: 1px solid #7aa7c7;
   font-size: 16px;
   color: #39739d;
